--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>L2</title>
+  <title>L2 - Time App</title>
   <link rel="stylesheet" href="./style.css">
-  <script type="module" src="./src/components/time-app/time-app.js"></script>
+  <script type="module" src="./src/components/time-app/index.js"></script>
 </head>
 
 <body>
